Added random message

--- a/suck.html
+++ b/suck.html
@@ -15,7 +15,7 @@
             <b>this</b><br>
             <strong>message</strong><br>
             <b>your browser</b><br>
-            <span>sucks!</span>
+            <span id="message">sucks</span>
         </div>
         <div class="bbrowser">to see this site you need a better browser</div>
         <div class="browsers">
